--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Madeline Miller - Profile</title>
+    <title>Madeline's Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="assets/beach.png" type="image/png">
 </head>
 <body>
     <nav class="navbar">
@@ -146,8 +147,19 @@
 
         <section id="hobbies" class="card">
             <h2>Hobbies</h2>
-            <p>I enjoy running, scuba diving, reading books, and spending time with my five dogs. I love the beach, the ocean, and the city of Santa Cruz!</p>
-        </section>
+            <div class="dynamic-card">
+                <p>
+                    I enjoy running, scuba diving, reading books, and spending time with my five dogs. I love the beach, the ocean, and the city of Santa Cruz!
+                </p>
+                <div class="hobbies-images">
+                    <img src="assets/beach.png" alt="Beach" class="hobby-image">
+                    <img src="assets/hawaii-hike.png" alt="Hawaii Hike" class="hobby-image">
+                    <img src="assets/sc-half-marathon.png" alt="Santa Cruz Half Marathon" class="hobby-image">
+                    <img src="assets/sr-half-marathon.jpeg" alt="Santa Rosa Half Marathon" class="hobby-image">
+                </div>
+            </div>
+        </section>        
+        
     </main>
 
     <footer>
