--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             <img src="assets/windows.png" alt="Windows" class="hover-image">
                         </div>
                     </div>
-                </div>div class="skills-text">
+                </div>
         </section>
         
         
