--- a/index.html
+++ b/index.html
@@ -76,26 +76,32 @@
             </div>
             <div class="dynamic-card">
                 <p><strong>Relevant Coursework:</strong></p>
-                    <div class="coursework-container">
-                        <div class="coursework-column">
-                            <ul>
-                                <li>Natural Language Processing</li>
-                                <li>Foundations in AI/ML</li>
-                                <li>Applied Machine Learning: Deep Learning</li>
-                                <li>Computer Architecture</li>
-                                <li>Linear Algebra with MATLAB</li>
-                            </ul>
-                        </div>
-                        <div class="coursework-column">
-                            <ul>
-                                <li>Data Structures & Algorithms in C/C++</li>
-                                <li>Software Engineering in Flutter & Firebase</li>
-                                <li>Programming Abstractions in Python</li>
-                                <li>Computer Systems Design in C</li>
-                                <li>Assembly Language</li>
-                            </ul>
-                        </div>
+                <div class="coursework-container">
+                    <div class="coursework-column">
+                        <ul>
+                            <li>Natural Language Processing</li>
+                            <li>Foundations in AI/ML</li>
+                            <li>Applied Machine Learning: Deep Learning</li>
+                            <li>Computer Architecture</li>
+                            <li>Linear Algebra with MATLAB</li>
+                        </ul>
                     </div>
+                    <div class="coursework-column">
+                        <ul>
+                            <li>Data Structures & Algorithms in C/C++</li>
+                            <li>Software Engineering in Flutter & Firebase</li>
+                            <li>Programming Abstractions in Python</li>
+                            <li>Computer Systems Design in C</li>
+                            <li>Assembly Language</li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Image container below the text -->
+                <div class="course-images-container">
+                    <img src="assets/deep-learning.png" alt="Deep Learning Image" class="course-image">
+                    <img src="assets/dsa.png" alt="Data Structures & Algorithms Image" class="course-image">
+                    <img src="assets/nlp.png" alt="Natural Language Processing Image" class="course-image">
+                </div>
             </div>
         </section>
         
