--- a/index.html
+++ b/index.html
@@ -10,15 +10,23 @@
 </head>
 <body>
     <nav class="navbar">
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#hobbies">Hobbies</a></li>
-        </ul>
-    </nav>
+    <span class="navbar-title">Madeline's Website</span>
+    <div class="navbar-spacer"></div> <!-- Spacer to push links to the center -->
+    <ul id="navbar-links">
+        <li><a href="#about" onclick="closeNavbar()">About</a></li>
+        <li><a href="#education" onclick="closeNavbar()">Education</a></li>
+        <li><a href="#skills" onclick="closeNavbar()">Skills</a></li>
+        <li><a href="#experience" onclick="closeNavbar()">Experience</a></li>
+        <li><a href="#projects" onclick="closeNavbar()">Projects</a></li>
+        <li><a href="#hobbies" onclick="closeNavbar()">Hobbies</a></li>
+    </ul>
+    <button class="navbar-toggle" onclick="toggleNavbar()">☰</button>
+</nav>
+
+    
+
+    <script src="script.js"></script>
+    
 
     <header class="banner">
         <h1>Madeline Miller</h1>
