more to experiences

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 <p><strong>GPA: 3.9/4.0</strong> <br> <br> Dean’s Honors List <br> <br> Top 15% of Engineering Class</p>
                 <div class="baskin-logo">
                     <img src="assets/baskin-engineering.png" alt="Baskin Engineering Logo" class="gpa-logo">
+                    
                 </div>
             </div>
             <div class="dynamic-card">
@@ -169,9 +170,50 @@
             </div>
             <!-- Add an id to JPMorgan experience for targeted linking -->
             <div id="jpmorgan-fellow" class="dynamic-card">
-                <h3>AI Studio Fellow, JP Morgan Chase</h3>
-                <p>Developed an AI-driven financial news analysis agent for predicting stock price impacts using NLP and deep learning.</p>
+                <div class="experience-text">
+                    <h3>AI Studio Fellow, JP Morgan Chase</h3>
+                    <p>Aug. 2024 - Present</p>
+                    <ul>
+                        <li>Developed an AI-driven financial news analysis agent, as measured by accurate prediction of stock price impacts using NLP, deep learning, and predictive modeling, through effective news summarization and financial sentiment analysis as part of Cornell University's Break Through Tech's AI Studio program.</li>
+                    </ul>
+                </div>
+                <div class="stock-images">
+                    <img src="assets/stock-predictions.png" alt="Stock Graph" class="stock-pic">
+                </div>
             </div>
+
+            <!-- Girls Who Code Club Experience -->
+            <div id="gwc-vp" class="dynamic-card">
+                <div class="experience-text">
+                    <h3>Vice President for Girls Who Code Club, UC Santa Cruz</h3>
+                    <p>May 2024 - Present</p>
+                    <ul>
+                        <li>Successfully hosted a technical workshop with Google engineers, as indicated by engaging 150+ members and receiving positive student feedback, through extensive planning and seamless execution.</li>
+                        <li>Boosted club engagement by achieving a 25% increase in membership through the strategic facilitation of professional development workshops, networking events, and team building activities.</li>
+                    </ul>
+                </div>
+                <div class="gwc-images">
+                    <a href="https://ucsc-gwc.club/" target="_blank">
+                        <img src="assets/gwc.png" alt="GWC logo" class="gwc-pic">
+                    </a>
+                </div>
+            </div>
+
+            <!-- Data Structures and Algorithms Tutor & Grader Experience -->
+            <div id="dsa-tutor" class="dynamic-card">
+                <div class="experience-text">
+                    <h3>Data Structures and Algorithms Tutor & Grader, UC Santa Cruz</h3>
+                    <p>Apr. 2023 - June 2024</p>
+                    <ul>
+                        <li>Mentored ~50 students in C/C++, improving their debugging skills, as measured by increased test case scores, by teaching efficient use of Valgrind/GDB debuggers and explaining in-depth coding strategies.</li>
+                    </ul>
+                </div>
+                <div class="dsa-images">
+                    <img src="assets/valgrind.png" alt="Valgrind Image" class="dsa-pic">
+                    <img src="assets/dsa-types.png" alt="Data Structures Types Image" class="dsa-pic">
+                </div>
+            </div>
+
         </section>
         
 
